monitoring/monitoring-referencegrant.yaml
apiVersion: gateway.networking.k8s.io/v1beta1
kind: ReferenceGrant
metadata:
  name: monitoring-referencegrant
  namespace: monitoring             # grant lives in the TARGET namespace
spec:
  from:
    - group: gateway.networking.k8s.io
      kind: HTTPRoute
      namespace: istio-ingress      # allow routes FROM this namespace
  to:
    - group: ""
      kind: Service
