monitoring/grafana-httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: grafana-httproute
  namespace: istio-ingress  
spec:       
  parentRefs:
    - name: istio-cluster-gateway          
      namespace: istio-ingress
      sectionName: http-grafana 
  hostnames:
    - "grafana.local"
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: kube-prom-stack-grafana
          namespace: monitoring
          port: 80
