monitoring/prometheus-httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: prometheus-httproute
  namespace: istio-ingress
spec:
  parentRefs:
    - name: istio-cluster-gateway
      namespace: istio-ingress
      sectionName: http-prometheus
  hostnames:
    - "prometheus.local"
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: kube-prom-stack-kube-prome-prometheus
          namespace: monitoring
          port: 9090
